# lzh

./: README.md
IPC/: Makefile  ipc.h  log.h  msgClient.cpp  service.cpp
code_Desay/libbasic/include/: SVPArgument.h  SVPLog.h  SVPMessage.h  SVPUnicode.h  SVPVariantEvent.h
code_Desay/libbasic/src/: SVPSomeIP.cpp  SVPString.cpp
code_Desay/liblog/: JsonMgr.h  Makefile-test  Recorder.h  g5r2.svp.log.conf.orig
code_notes/IPC/: Makefile  msgClient.cpp  service.cpp
code_notes/singleton/: singleton3.cpp  singleton4_1.cpp
code_notes/sort/: selectionSort.c
code_notes/test/: random.c  test.cpp
exercises/: 05_16To10.c
exercises/01GetLastWordLen/: GetLastWordLen.c
exercises/02GetCharNum/: GetCharNum.c
exercises/03OnlyandSort/: OnlyAndSort.c
exercises/04split/: spilt.c
exercises/GetCharNum/: GetCharNum.c
exercises/GetLastWordLen/: GetLastWordLen.c
exercises/get1bit/: Get1Bit.c
libbasic/: CMakeLists.txt
libbasic/include/: SVPEnv.h  SVPFile.h  SVPLog_.h  SVPSomeIP.h  SVPString.h  SVPSystem.h  SVPThread.h  SVPTime.h  SVPTupleHelper.h  SVPUtils.h  log.h
libbasic/src/: SVPFile.cpp  SVPMessage.cpp  SVPSystem.cpp  SVPThread.cpp  SVPTime.cpp  SVPUnicode.cpp  SVPUtils_BackTrace.cpp  SVPUtils_Signal.cpp
liblog/: CMakeLists.txt  JsonMgr.cpp  Recorder.cpp  log.c  log.h  test.cpp
list/: list.c
procguard/: procguard.c  procguard2.c  test.cpp  zombie.c
singleton/: singleton1.cpp  singleton2.cpp  singleton4.cpp  singleton5.cpp  singleton5_1.cpp
sort/: bubbleSort.c  stdSort.c
